fix: set body blur layer position to fixed to stop it from getting shifted around

--- a/nextcloud/usr/share/webapps/nextcloud/themes/docker-cloud/core/css/server.css
+++ b/nextcloud/usr/share/webapps/nextcloud/themes/docker-cloud/core/css/server.css
@@ -4,7 +4,7 @@
 
 body::before {
   content: "";
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
